--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name = "newsletter_api"
 
 [dependencies]
 actix-web = "4.2.1"
+serde = { version = "1.0.152", features = ["derive"] }
 tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
 
 [dev-dependencies]
